--- a/charts/cortex/ci/deployment-values.yaml
+++ b/charts/cortex/ci/deployment-values.yaml
@@ -52,3 +52,45 @@ nginx:
   replicas: 1
 consul:
   enabled: false
+
+memcached:
+  replicaCount: 1
+  resources: null
+  metrics:
+    enabled: false
+
+memcached-index-read:
+  replicaCount: 1
+  resources: null
+  metrics:
+    enabled: false
+
+memcached-index-write:
+  replicaCount: 1
+  resources: null
+  metrics:
+    enabled: false
+
+memcached-frontend:
+  replicaCount: 1
+  resources: null
+  metrics:
+    enabled: false
+
+memcached-index:
+  replicaCount: 1
+  resources: null
+  metrics:
+    enabled: false
+
+memcached-chunks:
+  replicaCount: 1
+  resources: null
+  metrics:
+    enabled: false
+
+memcached-metadata:
+  replicaCount: 1
+  resources: null
+  metrics:
+    enabled: false
