--- a/values.yaml
+++ b/values.yaml
@@ -46,6 +46,7 @@ config:
   auth_enabled: false
   api:
     prometheus_http_prefix: '/prometheus'
+    response_compression_enabled: true
   ingester:
     max_transfer_retries: 0
     lifecycler:
@@ -164,7 +165,6 @@ config:
   frontend:
     #  max_outstanding_per_tenant: 1000
     log_queries_longer_than: 10s
-    compress_responses: true
 
 rbac:
   create: true
