--- a/values.yaml
+++ b/values.yaml
@@ -46,6 +46,7 @@ config:
   auth_enabled: false
   api:
     prometheus_http_prefix: '/prometheus'
+    response_compression_enabled: true
   ingester:
     max_transfer_retries: 0
     lifecycler:
@@ -65,6 +66,7 @@ config:
     enforce_metric_name: false
     reject_old_samples: true
     reject_old_samples_max_age: 168h
+    max_query_lookback: 0s
   schema:
     configs:
       - from: 2020-11-01
@@ -126,7 +128,6 @@ config:
       memcached_client:
         timeout: 1s
   chunk_store:
-    max_look_back_period: 0s
     chunk_cache_config:
       memcached:
         expiration: 1h
@@ -164,7 +165,6 @@ config:
   frontend:
     #  max_outstanding_per_tenant: 1000
     log_queries_longer_than: 10s
-    compress_responses: true
 
 rbac:
   create: true
