feat: You can enable/disable security context
Signed-off-by: Parham Alvani <parham.alvani@gmail.com>

--- a/templates/alertmanager/alertmanager-dep.yaml
+++ b/templates/alertmanager/alertmanager-dep.yaml
@@ -38,8 +38,10 @@ spec:
     {{- if .Values.alertmanager.priorityClassName }}
       priorityClassName: {{ .Values.alertmanager.priorityClassName }}
     {{- end }}
-      securityContext:
-        {{- toYaml .Values.alertmanager.securityContext | nindent 8 }}
+
+      {{- if .Values.alertmanager.securityContext.enabled }}
+      securityContext: {{- omit .Values.alertmanager.securityContext "enabled" | toYaml | nindent 8 }}
+      {{- end }}
       initContainers:
         {{- toYaml .Values.alertmanager.initContainers | nindent 8 }}
       {{- if .Values.image.pullSecrets }}
