--- a/templates/configs/configs-dep.yaml
+++ b/templates/configs/configs-dep.yaml
@@ -35,8 +35,9 @@ spec:
     {{- if .Values.configs.priorityClassName }}
       priorityClassName: {{ .Values.configs.priorityClassName }}
     {{- end }}
-      securityContext:
-        {{- toYaml .Values.configs.securityContext | nindent 8 }}
+      {{- if .Values.configs.securityContext.enabled }}
+      securityContext: {{- omit .Values.configs.securityContext "enabled" | toYaml | nindent 8 }}
+      {{- end }}
       initContainers:
         {{- toYaml .Values.configs.initContainers | nindent 8 }}
       {{- if .Values.image.pullSecrets }}
