--- a/templates/query-frontend/query-frontend-dep.yaml
+++ b/templates/query-frontend/query-frontend-dep.yaml
@@ -34,8 +34,9 @@ spec:
     {{- if .Values.query_frontend.priorityClassName }}
       priorityClassName: {{ .Values.query_frontend.priorityClassName }}
     {{- end }}
-      securityContext:
-        {{- toYaml .Values.query_frontend.securityContext | nindent 8 }}
+      {{- if .Values.query_frontend.securityContext.enabled }}
+      securityContext: {{- omit .Values.query_frontend.securityContext "enabled" | toYaml | nindent 8 }}
+      {{- end }}
       initContainers:
         {{- toYaml .Values.query_frontend.initContainers | nindent 8 }}
       {{- if .Values.image.pullSecrets }}
