--- a/templates/ruler/ruler-dep.yaml
+++ b/templates/ruler/ruler-dep.yaml
@@ -37,8 +37,9 @@ spec:
     {{- if .Values.ruler.priorityClassName }}
       priorityClassName: {{ .Values.ruler.priorityClassName }}
     {{- end }}
-      securityContext:
-        {{- toYaml .Values.ruler.securityContext | nindent 8 }}
+      {{- if .Values.ruler.securityContext.enabled }}
+      securityContext: {{- omit .Values.ruler.securityContext "enabled" | toYaml | nindent 8 }}
+      {{- end }}
       initContainers:
         {{- toYaml .Values.ruler.initContainers | nindent 8 }}
       {{- if .Values.image.pullSecrets }}
