--- a/templates/alertmanager/alertmanager-dep.yaml
+++ b/templates/alertmanager/alertmanager-dep.yaml
@@ -74,6 +74,9 @@ spec:
             - name: http-metrics
               containerPort: {{ .Values.config.server.http_listen_port }}
               protocol: TCP
+            - name: grpc
+              containerPort: {{ .Values.config.memberlist.bind_port }}
+              protocol: TCP
           {{- if semverCompare ">=1.20-0" .Capabilities.KubeVersion.GitVersion }}
           startupProbe:
             {{- toYaml .Values.alertmanager.startupProbe | nindent 12 }}
