--- a/templates/ingester/ingester-statefulset.yaml
+++ b/templates/ingester/ingester-statefulset.yaml
@@ -126,6 +126,9 @@ spec:
             - name: http-metrics
               containerPort: {{ .Values.config.server.http_listen_port }}
               protocol: TCP
+            - name: grpc
+              containerPort: {{ .Values.config.memberlist.bind_port }}
+              protocol: TCP
           {{- if semverCompare ">=1.20-0" .Capabilities.KubeVersion.GitVersion }}
           startupProbe:
             {{- toYaml .Values.ingester.startupProbe | nindent 12 }}
