--- a/templates/store-gateway/store-gateway-statefulset.yaml
+++ b/templates/store-gateway/store-gateway-statefulset.yaml
@@ -124,6 +124,9 @@ spec:
             - name: grpc
               containerPort: {{ .Values.config.server.grpc_listen_port }}
               protocol: TCP
+            - name: grpc
+              containerPort: {{ .Values.config.memberlist.bind_port }}
+              protocol: TCP
           {{- if semverCompare ">=1.20-0" .Capabilities.KubeVersion.GitVersion }}
           startupProbe:
             {{- toYaml .Values.store_gateway.startupProbe | nindent 12 }}
