--- a/templates/query-frontend/query-frontend-svc-headless.yaml
+++ b/templates/query-frontend/query-frontend-svc-headless.yaml
@@ -20,7 +20,7 @@ spec:
       targetPort: http-metrics
     - port: {{ .Values.config.server.grpc_listen_port }}
       protocol: TCP
-      name: grpclb
+      name: grpc
       targetPort: grpc
   selector:
     {{- include "cortex.queryFrontendSelectorLabels" . | nindent 4 }}
