--- a/templates/store-gateway/store-gateway-svc.yaml
+++ b/templates/store-gateway/store-gateway-svc.yaml
@@ -20,8 +20,8 @@ spec:
       targetPort: http-metrics
     - port: {{ .Values.config.server.grpc_listen_port }}
       protocol: TCP
-      name: grpclb
-      targetPort: grpc      
+      name: grpc
+      targetPort: grpc
   selector:
     {{- include "cortex.storeGatewaySelectorLabels" . | nindent 4 }}
 {{- end -}}
