--- a/templates/distributor/distributor-svc-headless.yaml
+++ b/templates/distributor/distributor-svc-headless.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "cortex.distributorFullname" . }}
+  name: {{ include "cortex.distributorFullname" . }}-headless
   labels:
     {{- include "cortex.distributorLabels" . | nindent 4 }}
     {{- with .Values.distributor.labels }}
