--- a/values.yaml
+++ b/values.yaml
@@ -20,9 +20,9 @@ tags:
   blocks-storage-memcached: false
 
 ingress:
-  enabled: true
+  enabled: false
   annotations:
-    kubernetes.io/ingress.class: nginx
+    # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
   hosts:
     - host: chart-example.local
@@ -966,7 +966,7 @@ nginx:
       # X-Scope-OrgID: 0
   image:
     repository: nginx
-    tag: 1.17
+    tag: 1.21
     pullPolicy: IfNotPresent
 
   service:
