--- a/templates/query-frontend/query-frontend-dep.yaml
+++ b/templates/query-frontend/query-frontend-dep.yaml
@@ -77,8 +77,9 @@ spec:
             {{- toYaml .Values.query_frontend.readinessProbe | nindent 12 }}
           resources:
             {{- toYaml .Values.query_frontend.resources | nindent 12 }}
-          securityContext:
-            readOnlyRootFilesystem: true
+          {{- if .Values.query_frontend.podSecurityContext.enabled }}
+          securityContext: {{- omit .Values.query_frontend.podSecurityContext "enabled" | toYaml | nindent 8 }}
+          {{- end }}
           env:
             {{- if .Values.query_frontend.env }}
               {{- toYaml .Values.query_frontend.env | nindent 12 }}
