--- a/templates/querier/querier-dep.yaml
+++ b/templates/querier/querier-dep.yaml
@@ -78,8 +78,9 @@ spec:
             {{- toYaml .Values.querier.readinessProbe | nindent 12 }}
           resources:
             {{- toYaml .Values.querier.resources | nindent 12 }}
-          securityContext:
-            readOnlyRootFilesystem: true
+          {{- if .Values.querier.podSecurityContext.enabled }}
+          securityContext: {{- omit .Values.querier.podSecurityContext "enabled" | toYaml | nindent 8 }}
+          {{- end }}
           env:
             {{- if .Values.querier.env }}
               {{- toYaml .Values.querier.env | nindent 12 }}
