--- a/templates/ruler/ruler-dep.yaml
+++ b/templates/ruler/ruler-dep.yaml
@@ -99,8 +99,9 @@ spec:
             {{- toYaml .Values.ruler.readinessProbe | nindent 12 }}
           resources:
             {{- toYaml .Values.ruler.resources | nindent 12 }}
-          securityContext:
-            readOnlyRootFilesystem: true
+          {{- if .Values.ruler.podSecurityContext.enabled }}
+          securityContext: {{- omit .Values.ruler.podSecurityContext "enabled" | toYaml | nindent 8 }}
+          {{- end }}
           env:
             {{- if .Values.ruler.env }}
               {{- toYaml .Values.ruler.env | nindent 12 }}
