--- a/templates/distributor/distributor-dep.yaml
+++ b/templates/distributor/distributor-dep.yaml
@@ -81,8 +81,8 @@ spec:
             {{- toYaml .Values.distributor.readinessProbe | nindent 12 }}
           resources:
             {{- toYaml .Values.distributor.resources | nindent 12 }}
-          {{- if .Values.distributor.podSecurityContext.enabled }}
-          securityContext: {{- omit .Values.distributor.podSecurityContext "enabled" | toYaml | nindent 8 }}
+          {{- if .Values.distributor.containerSecurityContext.enabled }}
+          securityContext: {{- omit .Values.distributor.containerSecurityContext "enabled" | toYaml | nindent 8 }}
           {{- end }}
           env:
             {{- if .Values.distributor.env }}
