--- a/values.yaml
+++ b/values.yaml
@@ -271,7 +271,7 @@ alertmanager:
     # runAsNonRoot: true
     # runAsUser: 10001
 
-  podSecurityContext:
+  containerSecurityContext:
     enabled: true
     readOnlyRootFilesystem: true
 
@@ -400,7 +400,7 @@ distributor:
 
   securityContext: {}
 
-  podSecurityContext:
+  containerSecurityContext:
     enabled: true
     readOnlyRootFilesystem: true
 
@@ -537,7 +537,7 @@ ingester:
 
   securityContext: {}
 
-  podSecurityContext:
+  containerSecurityContext:
     enabled: true
     readOnlyRootFilesystem: true
 
@@ -616,7 +616,7 @@ ruler:
 
   securityContext: {}
 
-  podSecurityContext:
+  containerSecurityContext:
     enabled: true
     readOnlyRootFilesystem: true
 
@@ -723,7 +723,7 @@ querier:
 
   securityContext: {}
 
-  podSecurityContext:
+  containerSecurityContext:
     enabled: true
     readOnlyRootFilesystem: true
 
@@ -810,7 +810,7 @@ query_frontend:
       port: http-metrics
 
   securityContext: {}
-  podSecurityContext:
+  containerSecurityContext:
     enabled: true
     readOnlyRootFilesystem: true
 
@@ -886,7 +886,7 @@ table_manager:
 
   securityContext: {}
 
-  podSecurityContext:
+  containerSecurityContext:
     enabled: true
     readOnlyRootFilesystem: true
 
@@ -963,7 +963,7 @@ configs:
 
   securityContext: {}
 
-  podSecurityContext:
+  containerSecurityContext:
     enabled: true
     readOnlyRootFilesystem: true
 
@@ -1052,7 +1052,7 @@ nginx:
 
   securityContext: {}
 
-  podSecurityContext:
+  containerSecurityContext:
     enabled: true
     readOnlyRootFilesystem: true
 
@@ -1178,7 +1178,7 @@ store_gateway:
 
   securityContext: {}
 
-  podSecurityContext:
+  containerSecurityContext:
     enabled: true
     readOnlyRootFilesystem: true
 
@@ -1301,7 +1301,7 @@ compactor:
       port: http-metrics
 
   securityContext: {}
-  podSecurityContext:
+  containerSecurityContext:
     enabled: true
     readOnlyRootFilesystem: true
 
